First upload to develop

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         <img src="images/linkedin.png"  class="social"/>
                     </a>  
                     
-            </div>            
+                </div>            
                 <a class="button">See my projects</a>
             </section>
-        <section>
+        </section>
 
         <section class = "about-me">
             <h2>About me</h2>
