Both pages finished

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <header>
         
             <nav class="nav-bar">
-                
                 <div class="menu">
-                <a href="#projects" class="nav-item" id="nav-item-1"> Projects </a>
+                <a href="#project-section" class="nav-item" id="nav-item-1"> Projects </a>
                 <a href="#form" class="nav-item" id="nav-item-2"> Contact me </a>
                 </div>
             </nav>
@@ -32,7 +31,7 @@
             <img src="images/profile-photo2.png" id="profile-photo"> 
             <section class="description">
                 <h1 >Hi, my name is Anya!</h1>
-                <p>I AM SOFTWARE DEVELOPER AND DESIGNER.</p>
+                <p>SOFTWARE DEVELOPER AND DESIGNER</p>
                 <div class="socials">
                     <a href = "https://github.com/awesomeann" >
                         <img src="images/github-blue.png" class="social"/>
@@ -44,7 +43,7 @@
                         <img src="images/linkedin-blue.png"  class="social"/>
                     </a>  
                 </div> 
-                <a class="button">See my projects</a>
+                <a href="#project-section" class="button">See my projects</a>
             </section>
         </section>
 
@@ -83,20 +82,20 @@
         </section>
         <section id="projects">
 
-            <article class="project">
+            <article href="project1.html" class="project" targer="blank">
                 <h3>Project 1</h3>
-                <img src = "images/project-1.jpg" class="project-img"> 
+                <img href="project1.html" src="images/project-1.jpg" class="project-img"> 
 
 
             </article>
-            <article class="project">
+            <article href="project1.html" class="project" targer="blank">
                 <h3>Project 2</h3>
-                <img src="images/project-2.jpg" class="project-img"> 
+                <img  src="images/project-2.jpg" class="project-img"> 
             </article>
 
-            <article class="project">
+            <article href="project1.html" class="project" targer="blank">
                 <h3>Project 3</h3>
-                <img src="images/project-2.jpg" class="project-img"> 
+                <img href="project1.html" src="images/project-2.jpg" class="project-img"> 
             </article>
         </section>
 
