Links to project page added

--- a/index.html
+++ b/index.html
@@ -82,18 +82,18 @@
         </section>
         <section id="projects">
 
-            <article href="project1.html" class="project" targer="blank">
+            <article href="https://awesomeann.github.io/project1" class="project" targer="blank">
                 <h3>Project 1</h3>
                 <img href="project1.html" src="images/project-1.jpg" class="project-img"> 
 
 
             </article>
-            <article href="project1.html" class="project" targer="blank">
+            <article href="https://awesomeann.github.io/project1 class="project" targer="blank">
                 <h3>Project 2</h3>
                 <img  src="images/project-2.jpg" class="project-img"> 
             </article>
 
-            <article href="project1.html" class="project" targer="blank">
+            <article href="https://awesomeann.github.io/project1" class="project" targer="blank">
                 <h3>Project 3</h3>
                 <img href="project1.html" src="images/project-2.jpg" class="project-img"> 
             </article>
@@ -102,15 +102,19 @@
 
         <section class="form-section">
             <h2>Liked my work?</h2>
-             <form id="form">
+             <form id="form" action="mailto:anyabelkina123@gmail.com"  subject="New Form Sumbission!" method="post" enctype="text/plain">
                     <label for="yourname">First Name</label>
                     <input class = "input" type="text" id="yourname" name="yourname" placeholder="Your Name..">
                     <label for="email">E-mail</label>
                     <input class = "input" type="text" id="email" name="email" placeholder="Your E-mail..">
                     <label for="subject">Subject</label>
                     <textarea class = "input" id="subject" name="subject" placeholder="Write Something..."></textarea>
+                    <div id="form-button">
+                        <input id = "submit" type="submit" value="Submit" subject="New form submission">
+                    </div>
+                    
                 </form>
-                <input class = "input" id = "submit" type="submit" value="Submit">
+                
         </section>
 
 
