--- a/project1.html
+++ b/project1.html
@@ -62,15 +62,19 @@
 
         <section class="form-section">
             <h2>Liked my work?</h2>
-             <form id="form">
+             <form id="form" action="mailto:anyabelkina123@gmail.com"  subject="New Form Sumbission!" method="post" enctype="text/plain">
                     <label for="yourname">First Name</label>
                     <input class = "input" type="text" id="yourname" name="yourname" placeholder="Your Name..">
                     <label for="email">E-mail</label>
                     <input class = "input" type="text" id="email" name="email" placeholder="Your E-mail..">
                     <label for="subject">Subject</label>
                     <textarea class = "input" id="subject" name="subject" placeholder="Write Something..."></textarea>
+                    <div id="form-button">
+                        <input id = "submit" type="submit" value="Submit" subject="New form submission">
+                    </div>
+                    
                 </form>
-                <input class = "input" id = "submit" type="submit" value="Submit">
+                
         </section>
 
 
