--- a/project1.html
+++ b/project1.html
@@ -14,7 +14,7 @@
     <!-- HEADER -->
     <header>
             <nav class="nav-bar">
-                <a href="https://awesomeann.github.io/" class="nav-item" id="nav-item-1"> Home</a>
+                <a href="https://awesomeann.github.io/" class="nav-item" id="nav-item-1" target="blank"> Home</a>
                 <div class="menu">
                     <a href="#project-section" class="nav-item" id="nav-item-1"> Projects </a>
                     <a href="#form" class="nav-item" id="nav-item-2"> Contact me </a>
